--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.github.pires.obd.reader"
     android:versionCode="13"
-    android:versionName="2.0-RC2">
+    android:versionName="2.0-RC2"
+    android:permission="android.permission.RECEIVE_BOOT_COMPLETED"
+    >
 
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -19,12 +23,22 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_btcar"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+        <receiver android:name=".autostart">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED" />
+            </intent-filter>
+        </receiver>
+
+        <activity android:name=".hello"></activity>
+        <service android:enabled="true" android:name=".service" />
+
         <activity
-            android:name="com.github.pires.obd.reader.activity.MainActivity"
+            android:name=".activity.MainActivity"
             android:configChanges="orientation|screenSize"
-            android:launchMode="singleInstance"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:launchMode="singleInstance">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,27 +46,31 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.github.pires.obd.reader.activity.ConfigActivity"
-            android:launchMode="singleInstance"
-            android:label="@string/app_name"></activity>
+            android:name=".activity.ConfigActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleInstance" />
         <activity
-            android:name="com.github.pires.obd.reader.activity.TroubleCodesActivity"
-            android:launchMode="singleInstance"
-            android:label="@string/title_activity_trouble_codes"></activity>
-
+            android:name=".activity.TroubleCodesActivity"
+            android:label="@string/title_activity_trouble_codes"
+            android:launchMode="singleInstance" />
         <activity
-            android:name="com.github.pires.obd.reader.activity.TripListActivity"
-            android:launchMode="singleInstance"
-            android:label="@string/title_activity_trips_list"></activity>
+            android:name=".activity.TripListActivity"
+            android:label="@string/title_activity_trips_list"
+            android:launchMode="singleInstance" />
 
         <service
-            android:name="com.github.pires.obd.reader.io.ObdGatewayService"
-            android:launchMode="singleInstance"
-            android:exported="false" />
+            android:name=".io.ObdGatewayService"
+            android:exported="false"
+            android:launchMode="singleInstance" />
         <service
-            android:name="com.github.pires.obd.reader.io.MockObdGatewayService"
-            android:launchMode="singleInstance"
-            android:exported="false" />
+            android:name=".io.MockObdGatewayService"
+            android:exported="false"
+            android:launchMode="singleInstance" />
+        <service
+            android:name=".MyService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
+
