--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -2,10 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.github.pires.obd.reader"
-    android:versionCode="13"
-    android:versionName="2.0-RC2"
     android:permission="android.permission.RECEIVE_BOOT_COMPLETED"
-    >
+    android:versionCode="13"
+    android:versionName="2.0-RC2">
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -25,15 +24,6 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <receiver android:name=".autostart">
-            <intent-filter>
-                <action android:name="android.intent.action.BOOT_COMPLETED" />
-            </intent-filter>
-        </receiver>
-
-        <activity android:name=".hello"></activity>
-        <service android:enabled="true" android:name=".service" />
-
         <activity
             android:name=".activity.MainActivity"
             android:configChanges="orientation|screenSize"
@@ -67,10 +57,9 @@
             android:exported="false"
             android:launchMode="singleInstance" />
         <service
-            android:name=".MyService"
+            android:name=".BackgroundService.BackgroundService"
             android:enabled="true"
-            android:exported="true"></service>
+            android:exported="true" />
     </application>
 
 </manifest>
-
