--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.github.pires.obd.reader"
     android:permission="android.permission.RECEIVE_BOOT_COMPLETED"
-    android:versionCode="13"
-    android:versionName="2.0-RC2">
+    android:versionCode="14"
+    android:versionName="2.1">
 
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
