add our own background and intentservice. might not be needed as they have all their own services

--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -57,7 +57,11 @@
             android:exported="false"
             android:launchMode="singleInstance" />
         <service
-            android:name=".BackgroundService.BackgroundService"
+            android:name=".MSMBackgroundService"
+            android:enabled="true"
+            android:exported="true" />
+        <service
+            android:name=".MSMIntentService"
             android:enabled="true"
             android:exported="true" />
     </application>
