--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -38,19 +38,19 @@
         </activity>
         <activity
             android:name=".activity.ConfigActivity"
-            android:parentActivityName=".activity.MainActivity"
             android:label="@string/app_name"
-            android:launchMode="singleInstance" />
+            android:launchMode="singleInstance"
+            android:parentActivityName=".activity.MainActivity" />
         <activity
             android:name=".activity.TroubleCodesActivity"
-            android:parentActivityName=".activity.MainActivity"
             android:label="@string/title_activity_trouble_codes"
-            android:launchMode="singleInstance" />
+            android:launchMode="singleInstance"
+            android:parentActivityName=".activity.MainActivity" />
         <activity
             android:name=".activity.TripListActivity"
-            android:parentActivityName=".activity.MainActivity"
             android:label="@string/title_activity_trips_list"
-            android:launchMode="singleInstance" />
+            android:launchMode="singleInstance"
+            android:parentActivityName=".activity.MainActivity" />
 
         <service
             android:name=".io.ObdGatewayService"
